--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css">
 
-    <title>Wiweka Yoga Sadewa</title>
+    <title>Profile Page Wiweka</title>
   </head>
   <body>
 
     <!-- NavBar -->
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
-        <a class="navbar-brand" >Oprec NWDC</a>
+        <a class="navbar-brand" >My Profile</a>
       </div>
     </nav>
     <!-- Akhir NavBar -->
@@ -31,7 +31,7 @@
       <div class="container">
         <img src="img/profil.png" alt="profil" class="img-fluid">
         <h1 class="display-4">WI<span>WEKA</span> YOGA SADEWA</h1>
-        <p class="lead">Seseorang yang memiliki ketertarikan terhadap bidang Teknologi dan Informasi khusunya website dan software<br> Saat ini sedang hobi membongkar barang elektronik seperti laptop atau komputer, ya benar, membongkar saja<br> Merupakan pribadi yang teliti, kompeten dan bekerja keras dalam pekerjaan</p>
+        <p class="lead">Mahasiswa Teknologi Informasi UGM angkatan 2020 berasal dari Sleman.<br>Saat ini memiliki ketertarikan tinggi terhadap bidang Teknologi dan Informasi khusunya website dan software.<br>Merupakan pribadi yang teliti, kompeten dan bekerja keras dalam pekerjaan.<br>Sedang hobi membongkar barang elektronik seperti laptop atau komputer, iya, cuma mbongkar aja<br></p>
       </div>
     </div>
     <!-- Akhir Jumbotron -->
@@ -45,15 +45,15 @@
             <a class="badge badge-light wrap">Tech Stack</a>
           <div class="row">
             <div class="col-lg-5">
-              <img src="img/security.png" alt="bootstrap" class="float-left">
+              <img src="img/bootstrap.png" alt="bootstrap" class="float-left">
               <h4>Bootstrap 4</h4>
             </div>
             <div class="col-lg-4">
-              <img src="img/employee.png" alt="HTML" class="float-left">
+              <img src="img/HTML.png" alt="HTML" class="float-left">
               <h4>HTML</h4>
             </div>
             <div class="col-lg-3">
-              <img src="img/hires.png" alt="CSS" class="float-left">
+              <img src="img/CSS.png" alt="CSS" class="float-left">
               <h4>CSS</h4>
             </div>
           </div>
@@ -65,18 +65,19 @@
       <div class="row alasan">
         <div class="col">
           <h3>Alasan Join NWDC</h3>
-          <p>Aku join NWDC karena pengin dapat uang dari buat website</p>
+          <p>Menurutku membuat website adalah seni di bidang pemrograman. Bagiku membuat web ini layaknya melukis namun dengan media yang lebih modern. sejak kecil aku memang suka menggambar dan melukis. Semakin dewasa aku juga semakin mengenal teknologi seperti desain grafis dan tentunya web. Dengan bergabung dengan NWDC, aku ingin belajar lebih tentang pembuatan web sebagai kanvas baru untuk menuangkan gagasan dan imajinasiku.</p>
+          <p>Melalui NWDC ini akau juga ingin bergabung dengan komunitas yang sama - sama punya ketertarikan tentang website. Sharing, berkembang dan berprogres bersama</p>
         </div>
       </div>
       
       <!-- Front End -->
       <div class="row frontend">
         <div class="col-lg">
-          <img src="img/workingspace.png" alt="frontend" class="img-fluid">
+          <img src="img/frontend.png" alt="frontend" class="img-fluid">
         </div>
         <div class="col-lg">
           <h3>Front-End</h3>
-          <p>Bagian front-end dari sebuah website adalah bagian yang langsung dilihat oleh user. User juga bisa langsung berinteraksi pada bagian ini. Bagian ini dibangun menggunakan HTML, CSS, dan JavaScript.</p>
+          <p>Bagian front-end dari sebuah website adalah bagian yang dapat dilihat langsung oleh user pada layar. User juga bisa langsung berinteraksi pada bagian ini. Front-end berhubungan dengan UIUX yang mengatur tampilan website semenarik mungkin bersamaan dengan merancang pengalaman pengguna untuk memberikan kesan nyaman ketika berinteraksi. Bagian ini dibuat menggunakan HTML, CSS, dan JavaScript.</p>
         </div>
       </div>
       <!-- Akhir Front End -->
@@ -85,10 +86,10 @@
       <div class="row backend">
         <div class="col-lg">
           <h3>Back-End</h3>
-          <p>Back-end adalah bagian belakang layar dari sebuah website. Bahasa pemograman untuk back-end development diantaranya adalah PHP, Ruby, Python, dan banyak lainnya.</p>
+          <p>Back-end adalah bagian belakang layar dari sebuah website. Bagian dalam mengatur fungsionalitas website agar bekerja dengan baik. Bagian ini lebih berkutat dengan database dan manajemen konten di suatu website namun juga bertanggung jawab memastikan keamanan sebuah web. Bahasa pemograman untuk back-end development diantaranya adalah PHP, Ruby, Python, dan lainnya.</p>
         </div>
         <div class="col-lg">
-          <img src="img/workingspace1.png" alt="backend" class="img-fluid">
+          <img src="img/backend.png" alt="backend" class="img-fluid">
         </div>
       </div>
       <!-- Akhir Back End -->
@@ -96,7 +97,7 @@
       <!-- quoteku -->
       <div class="row quote justify-content-center">
         <div class="col-lg-8">
-          <p>" Semakin berjalannya waktu aku merasa banyak kesempatan telah terlewatkan, dari situ aku mulai belajar tidak ada yang namanya waktu yang tepat, mencoba mengambil setiap kesempatan yang ada termasuk oprec ini "</p>
+          <p>" Semakin berjalannya waktu aku merasa banyak kesempatan telah terlewatkan, dari situ aku mulai belajar tidak ada yang namanya waktu yang tepat, jadi terus mencoba mengambil setiap kesempatan yang ada, termasuk oprec ini "</p>
         </div>
       </div>
       <!-- akhir quoteku -->
@@ -106,7 +107,7 @@
     <!-- footer -->
     <div class="footer text-center">
       <div class="container">
-        <p>Akhir aja, Terimakasih</p>
+        <p>Terimakasih Sudah Membaca</p>
       </div>
     </div>
     <!-- akhir footer -->
